updated bottomNAv link menu to the right page updated the product.css, productsDetails.css to correct display error of showing off-screen

--- a/farm-flow/src/pages/Checkout.css
+++ b/farm-flow/src/pages/Checkout.css
@@ -1,7 +1,7 @@
 /* Page Wrapper */
 .checkout-page {
   min-height: 100vh;
-  width: 100vw;              
+  width: 100%;              
   background-color: #d1fae5;
   padding-bottom: 70px;
   box-sizing: border-box;
