--- a/farm-flow/src/pages/Favourites.css
+++ b/farm-flow/src/pages/Favourites.css
@@ -1,6 +1,6 @@
 .favourites-page {
   min-height: 100vh;
-  width: 100vw;       
+  width: 100%;       
   background-color: #d1fae5;
   padding-bottom: 70px;
   box-sizing: border-box;
