--- a/farm-flow/src/pages/Products.css
+++ b/farm-flow/src/pages/Products.css
@@ -1,11 +1,11 @@
 html, body {
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
 }
 
 .products-page {
   min-height: 100vh;
-  width: 100vw;      
+  width: 100%; 
   background-color: #d1fae5;
   padding-bottom: 70px;
   box-sizing: border-box;
